tests/multi_line_comment_string_line_index/error.txt
Validation error: ./tests/multi_line_comment_string_line_index/multi_line_comment_string_line_index.fae:20
 Expected return type of `str`, got `bool`
  20|     return true
          ^^^^^^^^^^^
